[package]
name = "leetcode"
version = "0.1.0"
authors = ["justforlxz <justforlxz@gmail.com>"]
edition = "2018"

[[bin]]
name = "leetcode"
path = "src/bin/leetcode.rs"

[lib]
name = "leetcode"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
